2000-05-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (scm_m_body, scm_macroexp, unmemocopy, scm_eval_args,
	scm_deval_args):  Eliminated redundant SCM_IMP tests.

	* hashtab.c (scm_ihashx, scm_sloppy_assx, scm_delx_x), weaks.c
	(scm_make_weak_key_hash_table, scm_make_weak_value_hash_table,
	scm_make_doubly_weak_hash_table):  Fixed critical sections.
	Thanks to Keisuke Nishida.

2000-05-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (scm_logand, scm_logior, scm_logxor, scm_logtest):
	Fixed some goto-related initialization bugs (introduced by me).

2000-05-04  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.h (SCM_INUM0):  Uses SCM_MAKINUM instead of SCM_PACK.

	* dynl.c (dynl_obj, DYNL_OBJ, get_dynl_obj):  Removed.

	(DYNL_FILENAME, DYNL_HANDLE):  Use SCM_CELL... macros instead of
	pointer trickery.

	(SET_DYNL_HANDLE):  Added.

	(scm_dynamic_object_p):  Simplified.

	(scm_dynamic_unlink, scm_dynamic_func):  Changed comment.  Deliver
	better error message when accessing unlinked dynamic objects.
	Eliminated call to get_dynl_obj.

2000-05-03  Marius Vollmer  <mvo@zagadka.ping.de>

	* scmsigs.c (orig_handlers) [!HAVE_SIGACTION]: Fix declaration to
	be an array of function pointers instead of being a pointer to an
	array returning function.  Thanks to Kalle Olavi Niemitalo!

2000-05-03  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (scm_divbigbig, scm_divbigint), numbers.h
	(scm_divbigbig, scm_divbigint):  Don't return zero any more to
	indicate that a division has a remainder, return SCM_UNDEFINED
	instead.  It is improbable that anyone actually used these
	functions outside of numbers.c.  For this reason and due to the
	change in behaviour the functions are static now.  Thus, if
	surprisingly there are users of	these functions they will at least
	get alarmed.

	* numbers.c:  Removed #ifdef SCM_BIGDIG #endif in those functions,
	that already have a clean dispatch order.  Note: SCM_BIGDIG is
	always defined.
